--- a/src/index.css
+++ b/src/index.css
@@ -24,19 +24,19 @@ a:hover {
   color: #535bf2;
 } */
 
-body {
-  /* margin: 0;
+/* body {
+  margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh; */
+  min-height: 100vh;
 
   display: flex;
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #f5f5f5;
-}
+} */
 
 /* h1 {
   font-size: 3.2em;
